--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css?family=Space+Mono:400,700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css"
+    />
     <title>SpaceX Launches</title>
   </head>
 
